--- a/LeetCode/771-780/779. 第K个语法符号（中等）.md
+++ b/LeetCode/771-780/779. 第K个语法符号（中等）.md
@@ -55,8 +55,8 @@ Tag : 「DFS」、「递归」
 
 倒推验证可通过实现递归函数 `int dfs(int r, int c, int cur)` 来做，含义为当第 $r$ 行第 $c$ 列的字符为 $cur$ 时，首行首列字符为何值。同时实现该函数是容易的：
 
-* 若「当前列 $c$ 为偶数且 $cur = 0$」或「当前列 $c$ 为奇数且 $cur = 1$」时，说明当前列所在的组为 `10`，由此可推出其是由上一行的 `1` 拓展而来，结合每次拓展新行字符数量翻倍的条件，可知是由第 $n - 1$ 行的第 $\left \lfloor \frac{c - 1}{2} \right \rfloor + 1$ 列的 `1` 拓展而来，递归处理；
-* 否则，同理，必然是上一行（第 $n - 1$ 行）对应位置的 `0` 拓展而来，递归处理。
+* 若「当前列 $c$ 为偶数且 $cur = 0$」或「当前列 $c$ 为奇数且 $cur = 1$」时，说明当前列所在的组为 `10`，由此可推出其是由上一行的 `1` 拓展而来，结合每次拓展新行字符数量翻倍的条件，可知是由第 $r - 1$ 行的第 $\left \lfloor \frac{c - 1}{2} \right \rfloor + 1$ 列的 `1` 拓展而来，递归处理；
+* 否则，同理，必然是上一行（第 $r - 1$ 行）对应位置的 `0` 拓展而来，递归处理。
 
 最终，当倒推到首行时，我们找到了递归出口，直接返回 `cur`。
 
