--- a/Index/分块.md
+++ b/Index/分块.md
@@ -4,5 +4,6 @@
 | [933. 最近的请求次数](https://leetcode-cn.com/problems/number-of-recent-calls/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/number-of-recent-calls/solution/by-ac_oier-evqe/) | 简单 | 🤩🤩🤩🤩🤩    |
 | [729. 我的日程安排表 I](https://leetcode.cn/problems/my-calendar-i/) | [LeetCode 题解链接](https://leetcode.cn/problems/my-calendar-i/solution/by-ac_oier-hnjl/) | 中等 | 🤩🤩🤩🤩     |
 | [732. 我的日程安排表 III](https://leetcode-cn.com/problems/my-calendar-iii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/my-calendar-iii/solution/by-ac_oier-cv31/) | 困难 | 🤩🤩🤩      |
+| [901. 股票价格跨度](https://leetcode.cn/problems/online-stock-span/) | [LeetCode 题解链接](https://leetcode.cn/problems/online-stock-span/solution/by-ac_oier-m8g7/) | 中等 | 🤩🤩🤩🤩     |
 | [剑指 Offer 59 - I. 滑动窗口的最大值](https://leetcode.cn/problems/hua-dong-chuang-kou-de-zui-da-zhi-lcof/) | [LeetCode 题解链接](https://leetcode.cn/problems/hua-dong-chuang-kou-de-zui-da-zhi-lcof/solution/by-ac_oier-sjym/) | 困难 | 🤩🤩🤩🤩🤩    |
 
