--- a/Index/并查集.md
+++ b/Index/并查集.md
@@ -7,6 +7,7 @@
 | [815. 公交路线](https://leetcode-cn.com/problems/bus-routes/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/bus-routes/solution/gong-shui-san-xie-yi-ti-shuang-jie-po-su-1roh/) | 困难 | 🤩🤩🤩🤩     |
 | [827. 最大人工岛](https://leetcode.cn/problems/making-a-large-island/) | [LeetCode 题解链接](https://leetcode.cn/problems/making-a-large-island/solution/by-ac_oier-1kmp/) | 困难 | 🤩🤩🤩🤩🤩    |
 | [886. 可能的二分法](https://leetcode.cn/problems/possible-bipartition/) | [LeetCode 题解链接](https://leetcode.cn/problems/possible-bipartition/solution/by-ac_oier-6j0n/) | 中等 | 🤩🤩🤩🤩     |
+| [934. 最短的桥](https://leetcode.cn/problems/shortest-bridge/) | [LeetCode 题解链接](https://leetcode.cn/problems/shortest-bridge/solution/by-ac_oier-56ly/) | 中等 | 🤩🤩🤩🤩     |
 | [952. 按公因数计算最大组件大小](https://leetcode.cn/problems/largest-component-size-by-common-factor/) | [LeetCode 题解链接](https://leetcode.cn/problems/largest-component-size-by-common-factor/solution/by-ac_oier-mw04/) | 困难 | 🤩🤩🤩🤩     |
 | [1020. 飞地的数量](https://leetcode-cn.com/problems/number-of-enclaves/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/number-of-enclaves/solution/gong-shui-san-xie-bing-cha-ji-dfs-yun-yo-oyh1/) | 中等 | 🤩🤩🤩      |
 | [1631. 最小体力消耗路径](https://leetcode-cn.com/problems/path-with-minimum-effort/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/path-with-minimum-effort/solution/fan-zheng-fa-zheng-ming-si-lu-de-he-fa-x-ohby/) | 中等 | 🤩🤩🤩      |
