--- a/LeetCode/1821-1830/1822. 数组元素积的符号（简单）.md
+++ b/LeetCode/1821-1830/1822. 数组元素积的符号（简单）.md
@@ -64,8 +64,8 @@ class Solution {
     }
 }
 ```
-TypeScipt 代码：
-```TypeScipt
+TypeScript 代码：
+```TypeScript
 function arraySign(nums: number[]): number {
     let ans = 0
     for (const x of nums) {
