--- a/Index/脑筋急转弯.md
+++ b/Index/脑筋急转弯.md
@@ -4,6 +4,7 @@
 | [406. 根据身高重建队列](https://leetcode.cn/problems/queue-reconstruction-by-height/) | [LeetCode 题解链接](https://leetcode.cn/problems/queue-reconstruction-by-height/solution/by-ac_oier-fda2/) | 中等 | 🤩🤩🤩      |
 | [419. 甲板上的战舰](https://leetcode-cn.com/problems/battleships-in-a-board/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/battleships-in-a-board/solution/gong-shui-san-xie-ji-chong-sao-miao-xian-trmc/) | 中等 | 🤩🤩🤩🤩     |
 | [423. 从英文中重建数字](https://leetcode-cn.com/problems/reconstruct-original-digits-from-english/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reconstruct-original-digits-from-english/solution/gong-shui-san-xie-nao-jin-ji-zhuan-wan-m-vg7a/) | 中等 | 🤩🤩🤩🤩     |
+| [621. 任务调度器](https://leetcode.cn/problems/task-scheduler/) | [LeetCode 题解链接](https://leetcode.cn/problems/task-scheduler/solution/by-ac_oier-3560/) | 中等 | 🤩🤩🤩🤩     |
 | [667. 优美的排列 II](https://leetcode.cn/problems/beautiful-arrangement-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/beautiful-arrangement-ii/solution/by-ac_oier-lyns/) | 中等 | 🤩🤩🤩🤩     |
 | [672. 灯泡开关 Ⅱ](https://leetcode.cn/problems/bulb-switcher-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/bulb-switcher-ii/solution/by-ac_oier-3ttx/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [908. 最小差值 I](https://leetcode.cn/problems/smallest-range-i/) | [LeetCode 题解链接](https://leetcode.cn/problems/smallest-range-i/solution/by-ac_oier-7fh0/) | 简单 | 🤩🤩🤩🤩     |
