--- a/LeetCode/801-810/810. 黑板异或游戏（困难）.md
+++ b/LeetCode/801-810/810. 黑板异或游戏（困难）.md
@@ -6,13 +6,13 @@ Tag : 「博弈论」、「数学」、「异或」
 
 
 
-黑板上写着一个非负整数数组 nums[i] 。
+黑板上写着一个非负整数数组 `nums[i]` 。
 
-Alice 和 Bob 轮流从黑板上擦掉一个数字，Alice 先手。如果擦除一个数字后，剩余的所有数字按位异或运算得出的结果等于 0 的话，当前玩家游戏失败。 (另外，如果只剩一个数字，按位异或运算得到它本身；如果无数字剩余，按位异或运算结果为 0。）
+`Alice` 和 `Bob` 轮流从黑板上擦掉一个数字，`Alice` 先手。如果擦除一个数字后，剩余的所有数字按位异或运算得出的结果等于 `0` 的话，当前玩家游戏失败。 (另外，如果只剩一个数字，按位异或运算得到它本身；如果无数字剩余，按位异或运算结果为 `0`。）
 
-换种说法就是，轮到某个玩家时，如果当前黑板上所有数字按位异或运算结果等于 0，这个玩家获胜。
+换种说法就是，轮到某个玩家时，如果当前黑板上所有数字按位异或运算结果等于 `0`，这个玩家获胜。
 
-假设两个玩家每步都使用最优解，当且仅当 Alice 获胜时返回 true。
+假设两个玩家每步都使用最优解，当且仅当 `Alice` 获胜时返回 `true`。
 
 
 
@@ -30,8 +30,8 @@ Alice 有两个选择: 擦掉数字 1 或 2。
 ```
 
 提示：
-* 1 <= N <= 1000
-* 0 <= nums[i] <= $2^{16}$
+* $1 <= N <= 1000$
+* $0 <= nums[i] <= 2^{16}$
 
 ---
 
@@ -76,25 +76,35 @@ Alice 有两个选择: 擦掉数字 1 或 2。
 
 则有：
 
-$$Sum' = Sum ⊕ nums[i] = 0$$
-    
+$$
+Sum' = Sum ⊕ nums[i] = 0
+$$
+
 由于是「后手必败态」，因此 $i$ 取任意一位，都满足上述式子。
 
 则有：
 
-$$Sum ⊕ nums[0] = ... = Sum ⊕ nums[k] = ... = Sum ⊕ nums[n - 1] = 0$$
+$$
+Sum ⊕ nums[0] = ... = Sum ⊕ nums[k] = ... = Sum ⊕ nums[n - 1] = 0
+$$
 
 同时根据「任意数值与 $0$ 异或数值不变」的特性，我们将每一项进行异或：
 
-$$(Sum ⊕ nums[0]) ⊕ ... ⊕ (Sum ⊕ nums[k]) ⊕ ... ⊕ (Sum ⊕ nums[n - 1]) = 0$$
+$$
+(Sum ⊕ nums[0]) ⊕ ... ⊕ (Sum ⊕ nums[k]) ⊕ ... ⊕ (Sum ⊕ nums[n - 1]) = 0
+$$
 
 根据交换律进行变换：
 
-$$(Sum ⊕ Sum ⊕ ... ⊕ Sum) ⊕ (nums[0] ⊕ ... ⊕ nums[k] ⊕ ... ⊕ nums[n - 1]) = 0 $$
+$$
+(Sum ⊕ Sum ⊕ ... ⊕ Sum) ⊕ (nums[0] ⊕ ... ⊕ nums[k] ⊕ ... ⊕ nums[n - 1]) = 0 
+$$
 
 再结合 $Sum$ 为原序列的异或和可得：
 
-$$(Sum ⊕ Sum ⊕ ... ⊕ Sum) ⊕ Sum = 0 , Sum \neq 0$$
+$$
+(Sum ⊕ Sum ⊕ ... ⊕ Sum) ⊕ Sum = 0 , Sum \neq 0
+$$
 
 至此，我们分析出当处于「后手必败态」时，去掉任意一个数值会满足上述式子。
 
@@ -136,8 +146,6 @@ class Solution {
 两种做法殊途同归，在某些博弈论问题上，「经验分析解法」可以通过「归纳」&「反证」很好分析出来，但这要求选手本身具有一定的博弈论基础；而「状态分析解法」则对选手的题量要求低些，逻辑推理能力高些。
 
 两种方法并无优劣之分，都是科学严谨的做法。
-
-我十分建议大家将此题解与 [官方题解](https://leetcode-cn.com/problems/chalkboard-xor-game/solution/hei-ban-yi-huo-you-xi-by-leetcode-soluti-eb0c/) 一同阅读，体会两种分析方法的区别。
 
 ---
 
