--- a/LeetCode/901-910/907. 子数组的最小值之和（中等）.md
+++ b/LeetCode/901-910/907. 子数组的最小值之和（中等）.md
@@ -56,7 +56,7 @@ Tag : 「数学」、「单调栈」
 到这里，我们会自然想到，通过单调栈的方式，分别预处理除 `l` 和 `r` 数组：
 
 * `l[i] = loc` 含义为下标 `i` 左边最近一个比 `arr[i]` 小的位置是 `loc`（若在 $arr[i]$ 左侧不存在比其小的数，则 `loc = -1`）
-* `r[i] = loc` 含义为下标 `i` 右边最近一个比 `arr[i]` 大的位置是 `loc`（若在 $arr[i]$ 左侧不存在比其大的数，则 `loc = n`）
+* `r[i] = loc` 含义为下标 `i` 右边最近一个比 `arr[i]` 小的位置是 `loc`（若在 $arr[i]$ 左侧不存在比其小的数，则 `loc = n`）
 
 当我们预处理两数组后，通过简单「乘法原理」即可统计以 $arr[i]$ 为最小值时，子数组的个数：
 
