--- a/Index/构造.md
+++ b/Index/构造.md
@@ -2,6 +2,7 @@
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [324. 摆动排序 II](https://leetcode.cn/problems/wiggle-sort-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/wiggle-sort-ii/solution/by-ac_oier-22bq/) | 中等 | 🤩🤩🤩🤩     |
 | [406. 根据身高重建队列](https://leetcode.cn/problems/queue-reconstruction-by-height/) | [LeetCode 题解链接](https://leetcode.cn/problems/queue-reconstruction-by-height/solution/by-ac_oier-fda2/) | 中等 | 🤩🤩🤩🤩     |
+| [481. 神奇字符串](https://leetcode.cn/problems/magical-string/) | [LeetCode 题解链接](https://leetcode.cn/problems/magical-string/solution/by-ac_oier-7wjo/) | 中等 | 🤩🤩🤩🤩     |
 | [621. 任务调度器](https://leetcode.cn/problems/task-scheduler/) | [LeetCode 题解链接](https://leetcode.cn/problems/task-scheduler/solution/by-ac_oier-3560/) | 中等 | 🤩🤩🤩🤩     |
 | [667. 优美的排列 II](https://leetcode.cn/problems/beautiful-arrangement-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/beautiful-arrangement-ii/solution/by-ac_oier-lyns/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [761. 特殊的二进制序列](https://leetcode.cn/problems/special-binary-string/) | [LeetCode 题解链接](https://leetcode.cn/problems/special-binary-string/solution/by-ac_oier-cz6h/) | 困难 | 🤩🤩🤩🤩🤩    |
