--- a/Index/字符串哈希.md
+++ b/Index/字符串哈希.md
@@ -4,5 +4,6 @@
 | [472. 连接词](https://leetcode-cn.com/problems/concatenated-words/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/concatenated-words/solution/gong-shui-san-xie-xu-lie-dpzi-fu-chuan-h-p7no/) | 困难 | 🤩🤩🤩🤩     |
 | [686. 重复叠加字符串匹配](https://leetcode-cn.com/problems/repeated-string-match/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/repeated-string-match/solution/gong-shui-san-xie-yi-ti-san-jie-qia-chan-3hbr/) | 中等 | 🤩🤩🤩🤩     |
 | [1044. 最长重复子串](https://leetcode-cn.com/problems/longest-duplicate-substring/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-duplicate-substring/solution/gong-shui-san-xie-zi-fu-chuan-ha-xi-ying-hae9/) | 困难 | 🤩🤩🤩🤩     |
+| [1668. 最大重复子字符串](https://leetcode.cn/problems/maximum-repeating-substring/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-repeating-substring/solution/by-ac_oier-xjhn/) | 简单 | 🤩🤩🤩🤩🤩    |
 | [面试题 01.09. 字符串轮转](https://leetcode.cn/problems/string-rotation-lcci/) | [LeetCode 题解链接](https://leetcode.cn/problems/string-rotation-lcci/solution/by-ac_oier-2wo1/) | 中等 | 🤩🤩🤩🤩🤩    |
 
