--- a/Index/表达式计算问题.md
+++ b/Index/表达式计算问题.md
@@ -5,4 +5,5 @@
 | [227. 基本计算器 II](https://leetcode-cn.com/problems/basic-calculator-ii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/basic-calculator-ii/solution/shi-yong-shuang-zhan-jie-jue-jiu-ji-biao-c65k/) | 中等 | 🤩🤩🤩🤩     |
 | [592. 分数加减运算](https://leetcode.cn/problems/fraction-addition-and-subtraction/) | [LeetCode 题解链接](https://leetcode.cn/problems/fraction-addition-and-subtraction/solution/by-ac_oier-rmpy/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [1006. 笨阶乘](https://leetcode-cn.com/problems/clumsy-factorial/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/clumsy-factorial/solution/gong-shui-san-xie-tong-yong-biao-da-shi-nngfp/) | 中等 | 🤩🤩🤩      |
+| [1106. 解析布尔表达式](https://leetcode.cn/problems/parsing-a-boolean-expression/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/tag-validator/solution/by-ac_oier-9l8z/) | 困难 | 🤩🤩🤩🤩     |
 
