--- a/LeetCode/1721-1730/1723. 完成所有工作的最短时间（困难）.md
+++ b/LeetCode/1721-1730/1723. 完成所有工作的最短时间（困难）.md
@@ -38,8 +38,8 @@ Tag : 「DFS」、「模拟退火」、「启发式搜索」、「随机化」
 ```
 
 提示：
-* 1 <= k <= jobs.length <= 12
-* 1 <= jobs[i] <= $10^7$
+* $1 <= k <= jobs.length <= 12$
+* $1 <= jobs[i] <= 10^7$
 
 ---
 
@@ -185,6 +185,8 @@ class Solution {
 2. 如果温度下降（交换后的序列更优），进入下一次迭代
 3. 如果温度上升（交换前的序列更优），以「一定的概率」恢复现场（再交换回来）
 
+> 对于一个能够运用模拟退火求解的问题，最核心的是如何实现 `calc` 方法（即如何定义一个具体方案的得分），其余均为模板内容。
+
 代码：
 ```Java
 class Solution {
@@ -249,18 +251,23 @@ class Solution {
     }
 }
 ```
+* 时间复杂度：启发式搜索不讨论时空复杂度
+* 空间复杂度：启发式搜索不讨论时空复杂度
 
 ---
 
 ### 我猜你问
 
 **Q0. 模拟退火有何风险？**
+
 随机算法，会面临 `WA` 和 `TLE` 风险。
 
 **Q1. 模拟退火中的参数如何敲定的？**
+
 根据经验猜的，然后提交。根据结果是 `WA` 还是 `TLE` 来决定之后的调参方向。如果是 `WA` 说明部分数据落到了「局部最优」或者尚未达到「全局最优」。
 
 **Q2. 参数如何调整？**
+
 如果是 `WA` 了，一般我是优先调大 fa 参数，使降温变慢，来变相增加迭代次数；如果是 `TLE` 了，一般是优先调小 fa 参数，使降温变快，减小迭代次数。总迭代参数 `N` 也是同理。
 
 可以简单理解调大 fa 代表将「大步」改为「baby step」，防止越过全局最优，同时增加总执行步数。
@@ -290,7 +297,6 @@ class Solution {
 然后将得到的「合法解」配合 `max >= ans` 去剪枝掉那些「必然不是最优解」的方案。
 
 **本质上，我们并没有主动的否决某些方案（也就是我们并没有改动递归树），我们只是调整了搜索顺序来剪枝掉了一些「必然不是最优」的搜索路径。**
-
 
 ---
 
