--- a/LeetCode/761-770/764. 最大加号标志（中等）.md
+++ b/LeetCode/761-770/764. 最大加号标志（中等）.md
@@ -6,7 +6,7 @@ Tag : 「模拟」、「预处理」
 
 
 
-在一个 $n \times n$ 的矩阵 `grid` 中，除了在数组 `mines` 中给出的元素为 `0`，其他每个元素都为 `1`。$mines[i] = [x_i, y_i]$ 表示 $grid[x_i][y_i] = 0$
+在一个 $n \times n$ 的矩阵 `grid` 中，除了在数组 `mines` 中给出的元素为 `0`，其他每个元素都为 `1`。$mines[i] = [x_i, y_i]$ 表示 $grid[x_i][y_i] = 0$。
 
 返回  `grid` 中包含 `1` 的最大的 轴对齐 加号标志的阶数 。如果未找到加号标志，则返回 `0` 。
 
