--- a/LeetCode/511-520/516. 最长回文子序列（中等）.md
+++ b/LeetCode/511-520/516. 最长回文子序列（中等）.md
@@ -6,7 +6,7 @@ Tag : 「动态规划」、「区间 DP」
 
 
 
-给你一个字符串 s ，找出其中最长的回文子序列，并返回该序列的长度。
+给你一个字符串 `s` ，找出其中最长的回文子序列，并返回该序列的长度。
 
 子序列定义为：不改变剩余字符顺序的情况下，删除某些字符或者不删除任何字符形成的一个序列。
 
@@ -29,8 +29,8 @@ Tag : 「动态规划」、「区间 DP」
 ```
 
 提示：
-* 1 <= s.length <= 1000
-* s 仅由小写英文字母组成
+* $1 <= s.length <= 1000$
+* `s` 仅由小写英文字母组成
 
 ---
 
