--- a/LeetCode/161-170/162. 寻找峰值（中等）.md
+++ b/LeetCode/161-170/162. 寻找峰值（中等）.md
@@ -4,13 +4,15 @@
 
 Tag : 「二分」
 
+
+
 峰值元素是指其值严格大于左右相邻值的元素。
 
-给你一个整数数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可。
+给你一个整数数组 `nums`，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可。
 
-你可以假设 nums[-1] = nums[n] = -∞ 。
+你可以假设 `nums[-1] = nums[n] = -∞` 。
 
-你必须实现时间复杂度为 O(log n) 的算法来解决此问题。
+你必须实现时间复杂度为 $O(\log{n})$ 的算法来解决此问题。
 
 示例 1：
 ```
@@ -30,11 +32,10 @@ Tag : 「二分」
      或者返回索引 5， 其峰值元素为 6。
 ```
 
-
 提示：
-* 1 <= nums.length <= 1000
-* -$2^{31}$ <= nums[i] <= $2^{31}$ - 1
-* 对于所有有效的 i 都有 nums[i] != nums[i + 1]
+* $1 <= nums.length <= 1000$
+* $-2^{31} <= nums[i] <= 2^{31} - 1$
+* 对于所有有效的 `i` 都有 `nums[i] != nums[i + 1]`
 
 ---
 
