--- a/LeetCode/771-780/775. 全局倒置与局部倒置（中等）.md
+++ b/LeetCode/771-780/775. 全局倒置与局部倒置（中等）.md
@@ -8,7 +8,7 @@ Tag : 「树状数组」、「数学」
 
 给你一个长度为 `n` 的整数数组 `nums`，表示由范围 $[0, n - 1]$ 内所有整数组成的一个排列。
 
-全局倒置 的数目等于满足下述条件不同下标对 (i, j) 的数目：
+全局倒置 的数目等于满足下述条件不同下标对 $(i, j)$ 的数目：
 
 * $0 <= i < j < n$
 * $nums[i] > nums[j]$
@@ -38,7 +38,7 @@ Tag : 「树状数组」、「数学」
 ```
 
 提示：
-* $n == nums.length$
+* $n = nums.length$
 * $1 <= n <= 10^5$
 * $0 <= nums[i] < n$
 * `nums` 中的所有整数 互不相同
