--- a/LeetCode/1731-1740/1732. 找到最高海拔（简单）.md
+++ b/LeetCode/1731-1740/1732. 找到最高海拔（简单）.md
@@ -63,7 +63,7 @@ function largestAltitude(g: number[]): number {
 }
 ```
 Python3 代码：
-```Python3
+```Python
 class Solution:
     def largestAltitude(self, g: List[int]) -> int:
         cur, ans = 0, 0
